Added a button to the Edit User page to re-send the signup email.
---- Changes since 3.92 ----
Updated the phpMyAdmin script installer to version 3.5.2, Drupal to 7.14 and 6.26, SugarCRM to 6.5, FengOffice to 2.1.0, Zikula to 1.2.9, OpenX to 2.8.9, ZenPhoto to 1.4.3, phpMyFAQ to 2.7.7, Movable Type to 5.14, Typo3 to 4.6.10, Flyspray to 0.9.9.7, PiWik to 1.8.2, WordPress to 3.4.1, Mantis to 1.2.11, Coppermime to 1.5.20, Joomla to 2.5.6, Magento to 1.7.0.2, Instiki to 0.19.4, Moodle to 2.3.1, Dolibarr to 3.2.0, Z-Push to 2.0-1346, DokuWiki to 2012-01-25b, and MediaWiki to 1.19.1.
Added new API commands list list-s3-buckets and upload-s3-file for manipulating files on Amazon's S3 service.
Backups of more than 2GB to Amazon's S3 service now use the mulitpart protocol, which is needed to support large backups.
The contact email address for a domain can now contain multiple addresses with real names.
The DKIM feature in Virtualmin now supports OpenDKIM, as seen in Ubuntu 12.04.
Backups to Amazon S3 can now be to a sub-directory under a bucket, rather than being at the top level.
The disable-feature and enable-feature API commands now have flags to disassocaite and re-associate features with a domain, without actually updating the underlying configuration files or databases.
Virtual server owners can now be granted permission to create domains on a single IP address.
Added an option to the restore form and a flag to restore-domain to ignore virtual servers that have failed.
The default shell for new virtual servers on Linux systems is now bash, if installed.
When the SSL certificate for a domain is changed, any domains which shared the old cert but cannot use the new one will be switched to a copy of the old cert file.
---- Changes since 3.93 ----
Alias virtual servers that have their own mailboxes and aliases can now be created, rather than always forwarding mail to the destination domain.