@@ -71,10 +71,16 @@ if ($in{'confirm'}) {
 		if (&compare_versions($sinfo->{'version'}, $ver,
 				      $script) >= 0) {
 			# Already got it
+			&$outdent_print();
 			&$second_print(&text('massscript_ever',
 					     $sinfo->{'version'}));
+			next;
 			}
-		elsif ($derr = &check_script_depends($script,
+
+		# Install needed packages
+		&setup_script_packages($script, $d);
+
+		if ($derr = &check_script_depends($script,
 						     $d, $ver, $sinfo)) {
 			# Failed depends
 			&$second_print(&text('massscript_edep', $derr));
